update storage models

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -64,6 +64,8 @@ limitations under the License.
             <div>
               <label for="store-domain">Domain...</label><br>
               <input type="text" id="store-domain" autocomplete="off"><br>
+              <label for="store-username">Username...</label><br>
+              <input type="text" id="store-username" autocomplete="off"><br>
               <label for="store-password">Password...</label><br>
               <input type="text" id="store-password" autocomplete="off"><br>
             </div>
