--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,87 +15,68 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <html>
+
 <head>
-  <meta charset=utf-8 />
+  <title>Password Bank</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Vault</title>
 
-  <!-- Material Design Theming -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <script type="module" src="scripts/main.js"></script>
 </head>
+
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
-
-  <!-- Header section containing title -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--8-col-desktop">
-        <a href="/"><h3>Password Vault</h3></a>
-      </div>
-    </div>
-  </header>
-
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-
-      <!-- Container for the demo -->
-      <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
-          <h2 class="mdl-card__title-text">Google Authentication with Popup</h2>
-        </div>
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <div id="user-container">
-            <div hidden id="user-pic"></div>
-            <div hidden id="user-name"></div>
-            <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-button--raised">
-              Sign-out
-            </button>
-            <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-button--raised">
-              <i class="material-icons">account_circle</i>Sign-in with Google
-            </button>
+  <div class="wrapper d-flex align-items-stretch">
+      <nav id="sidebar">
+          <div class="custom-menu">
+              <button type="button" id="sidebar-collapse" class="btn btn-primary">
+              </button>
           </div>
-
-          <form hidden id="login-info-form" action="#">
-            <div>
-              <label for="store-domain">Domain...</label><br>
-              <input type="text" id="store-domain" autocomplete="off"><br>
-              <label for="store-username">Username...</label><br>
-              <input type="text" id="store-username" autocomplete="off"><br>
-              <label for="store-password">Password...</label><br>
-              <input type="text" id="store-password" autocomplete="off"><br>
-            </div>
-            <button id="store-button" type="submit">Store</button>
-          </form>
-
-          <form hidden id="retrieve-form" action="#">
-            <div>
-              <label for="get-domain">Domain...</label><br>
-              <input type="text" id="get-domain" autocomplete="off"><br>
-            </div>
-            <button id="retrieve-button" type="submit">Get</button>
-          </form>
-
-          <button hidden id="list-button">
-            list domains
-          </button>
-
-          <!-- Container where we'll display the user details -->
-          <div class="quickstart-user-details-container">
-            Firebase sign-in status: <span id="quickstart-sign-in-status">Unknown</span>
-            <div>Firebase auth <code>currentUser</code> object value:</div>
-            <pre><code id="quickstart-account-details">null</code></pre>
-            <div>Google OAuth ID Token:</div>
-            <pre><code id="quickstart-oauthtoken">null</code></pre>
+          <div class="img bg-wrap text-center py-4" style="background-image: url(images/bg_1.jpg);">
+              <div class="user-logo">
+                  <div id='profile-pic' class="img" style="background-image: url(images/logo.jpg);"></div>
+                  <h3 id='user-name'>Not Signed in</h3>
+              </div>
           </div>
-        </div>
+          <ul class="list-unstyled components mb-5">
+              <li id='sign-in-item' class="active">
+                  <a id='sign-in-button' href="#"><span class="fa fa-sign-in mr-3"></span>Sign In</a>
+              </li>
+              <li hidden id='domains-item' class="active">
+                  <a id='domains-button' href="#"><span class="fa fa-globe mr-3"></span>Domains</a>
+              </li>
+              <li hidden id='store-password-item' class="active">
+                  <a id='store-password-button' href="#"><span class="fa fa-key mr-3"></span>Store Password</a>
+              </li>
+              <li hidden id='support-item' class="active">
+                  <a id='support-button' href="#"><span class="fa fa-support mr-3"></span>Support</a>
+              </li>
+              <li hidden id='sign-out-item' class="active">
+                  <a id='sign-out-button' href="#"><span class="fa fa-sign-out mr-3"></span>Sign Out</a>
+              </li>
+          </ul>
+      </nav>
+
+      <!-- Page Content  -->
+      <div id="content" class="p-4 p-md-5 pt-5">
+          <h2 class="mb-4">Password Bank</h2>
+          <ul hidden id='domains-list'></ul>
+          <form hidden id="input-form" action="#">
+            <div>
+              <label for="input-domain">Domain...</label><br>
+              <input type="text" id="input-domain" autocomplete="off"><br>
+              <label for="input-username">Username...</label><br>
+              <input type="text" id="input-username" autocomplete="off"><br>
+              <label for="input-password">Password...</label><br>
+              <input type="text" id="input-password" autocomplete="off"><br>
+            </div>
+            <button id="input-button" type="submit">Store</button>
+          </form>
       </div>
-    </div>
-  </main>
-</div>
+  </div>
 </body>
+
 </html>
