update style css

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,8 @@ limitations under the License.
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script type="module" src="scripts/main.js"></script>
 </head>
@@ -105,8 +107,8 @@ limitations under the License.
             <form hidden id="input-form" action="#">
                 <div class="form-group">
                     <label for="input-domain">Domain</label>
-                    <input type="text" class="form-control" id="input-domain"
-                        aria-describedby="domainHelp" placeholder="Enter domain">
+                    <input type="text" class="form-control" id="input-domain" aria-describedby="domainHelp"
+                        placeholder="Enter domain">
                     <small id="domainHelp" class="form-text text-muted">
                         The domain/website whose login you want to store.
                     </small>
